--- a/resume.tex
+++ b/resume.tex
@@ -71,7 +71,7 @@ GPA: 3.932/4.00
 \textit{Student Software Engineer} \hfill September 2019 - April 2022
 \begin{itemize}
 	\item Modernized and maintained internal web applications used by faculty, staff, and students
-	\item Rewritten web applications using Node.js and implemented automated Playwright testing, improving performance and reducing QA time
+	\item Rewrote web applications using Node.js and implemented automated Playwright testing, improving performance and reducing QA time
 	\item Refactored legacy code into Python integrations deployed in Kubernetes cluster, enhancing scalability
 \end{itemize}
 
